infra/k8s/dada-auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dada-auth-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: data-auth-container
          image: msalunkhe/dada-auth
          ports:
            - containerPort: 2200
---
apiVersion: v1
kind: Service
metadata:
  name: dada-auth-service
spec:
  selector:
    app: auth
  ports:
    - protocol: TCP
      port: 2200
      targetPort: 2200
