infra/k8s/dada-ornament-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dada-ornament-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ornament
  template:
    metadata:
      labels:
        app: ornament
    spec:
      containers:
        - name: data-ornament-container
          image: msalunkhe/dada-ornament
          ports:
            - containerPort: 2100
---
apiVersion: v1
kind: Service
metadata:
  name: dada-ornament-service
spec:
  selector:
    app: ornament
  ports:
    - protocol: TCP
      port: 2100
      targetPort: 2100
