infra/k8s/dada-ingress-svc.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dada-auth-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: deepak-jewellers.com
      http:
        paths:
          - path: /api/ornament(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dada-ornament-service
                port:
                  number: 2100
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dada-auth-service
                port:
                  number: 2200
